phase_7/k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: anime-api-ingress
  namespace: anime-api
  annotations:
    kubernetes.io/ingress.class: gce
spec:
  rules:
    - http:
        paths:
          - path: /analytics
            pathType: Prefix
            backend:
              service:
                name: analytics
                port:
                  number: 80
          - path: /recommendations
            pathType: Prefix
            backend:
              service:
                name: recommendations
                port:
                  number: 80
